// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCompileRequest createCompileRequest 1`] = `
{
  "experimental": [],
  "targets": [],
}
`;

exports[`createCompileRequest createCompileRequest 2`] = `
{
  "experimental": [],
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "generateNonStrict": false,
      "name": "words",
      "sources": [
        "src/words.txt",
      ],
      "targetDirectory": ".",
    },
  ],
}
`;

exports[`createCompileRequest createCompileRequest 3`] = `
{
  "experimental": [],
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "generateNonStrict": false,
      "name": "words",
      "sources": [
        "src/words.txt",
      ],
      "targetDirectory": "out",
    },
    {
      "compress": false,
      "format": "plaintext",
      "generateNonStrict": false,
      "name": "cities",
      "sources": [
        "src/cities.txt",
      ],
      "targetDirectory": "out",
    },
  ],
}
`;

exports[`createCompileRequest createCompileRequest 4`] = `
{
  "experimental": [],
  "targets": [
    {
      "compress": false,
      "format": "plaintext",
      "generateNonStrict": false,
      "name": "combo",
      "sources": [
        "src/words.txt",
        "src/cities.txt",
      ],
      "targetDirectory": "out",
    },
  ],
}
`;
